samples/_failures_safe/1761699562_ccfde3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09c092c6.c: In function ‘main’:
./samples/SAFE/__tmp_09c092c6.c:152:22: error: expected ‘;’ at end of input
  152 |                 break
      |                      ^
      |                      ;
./samples/SAFE/__tmp_09c092c6.c:152:17: error: expected declaration or statement at end of input
  152 |                 break
      |                 ^~~~~
./samples/SAFE/__tmp_09c092c6.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09c092c6.c:152:17: error: expected declaration or statement at end of input
